test/fail/nomain.v3
def foo() -> int { return 0; }
export foo;
